{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 1194,
  "lineage": "bcfcf94a-e00c-65ed-f7ba-7ba7423ee7a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08188a5a4dfdbd573",
            "arn": "arn:aws:ec2:ap-south-1:882040517001:instance/i-0dcc501a060db47d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "order-saga-ec2-mq-profile",
            "id": "i-0dcc501a060db47d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0676a0fecd86ef7a2",
            "private_dns": "ip-10-0-1-213.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-13-207-153-31.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.153.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:882040517001:key/958ce1af-f2f8-4df4-9760-863ede0e84f7",
                "tags_all": {
                  "Environment": "POC",
                  "ManagedBy": "Terraform",
                  "Project": "OrderSaga"
                },
                "throughput": 125,
                "volume_id": "vol-0dbc2e57aa186ced5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c2b457520b89753",
            "tags": {
              "Name": "order-saga-monitoring"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-monitoring",
              "Project": "OrderSaga"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011141b5698e59f77"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_mq",
            "aws_iam_role.ec2_mq",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_security_group.monitoring",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f35208dba26f009",
            "arn": "arn:aws:ec2:ap-south-1:882040517001:instance/i-09ed9a29c2efca542",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:882040517001:key/958ce1af-f2f8-4df4-9760-863ede0e84f7",
                "tags_all": {
                  "Environment": "POC",
                  "ManagedBy": "Terraform",
                  "Project": "OrderSaga"
                },
                "throughput": 125,
                "volume_id": "vol-01e63441b05a30098",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "order-saga-ec2-mq-profile",
            "id": "i-09ed9a29c2efca542",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "pro",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c94a34b2575c47c",
            "private_dns": "ip-10-0-1-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-13-126-158-136.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.158.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:882040517001:key/958ce1af-f2f8-4df4-9760-863ede0e84f7",
                "tags_all": {
                  "Environment": "POC",
                  "ManagedBy": "Terraform",
                  "Project": "OrderSaga"
                },
                "throughput": 125,
                "volume_id": "vol-002276ff4a1c61ae1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c2b457520b89753",
            "tags": {
              "Name": "order-saga-mq"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-mq",
              "Project": "OrderSaga"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e03490f2df82e04b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_mq",
            "aws_iam_role.ec2_mq",
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.mq",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pgadmin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f35208dba26f009",
            "arn": "arn:aws:ec2:ap-south-1:882040517001:instance/i-05549fa7f8b93aa66",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "order-saga-ec2-mq-profile",
            "id": "i-05549fa7f8b93aa66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d184e3cd2c11890c",
            "private_dns": "ip-10-0-1-106.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-13-201-91-50.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.91.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:882040517001:key/958ce1af-f2f8-4df4-9760-863ede0e84f7",
                "tags_all": {
                  "Environment": "POC",
                  "ManagedBy": "Terraform",
                  "Project": "OrderSaga"
                },
                "throughput": 125,
                "volume_id": "vol-03e6ce06f18f422f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c2b457520b89753",
            "tags": {
              "Name": "order-saga-pgadmin"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-pgadmin",
              "Project": "OrderSaga"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09170d51dcba64d03"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_subnet_group.rds",
            "aws_iam_instance_profile.ec2_mq",
            "aws_iam_role.ec2_mq",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.mq",
            "aws_security_group.pgadmin",
            "aws_security_group.rds",
            "aws_ssm_parameter.postgres_password",
            "aws_ssm_parameter.postgres_user",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:internet-gateway/igw-05369f75c56097597",
            "id": "igw-05369f75c56097597",
            "owner_id": "882040517001",
            "tags": {
              "Name": "order-saga-igw"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-igw",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d",
            "arn_suffix": "app/order-saga-alb/d9974d5daff81d1d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "order-saga-alb-1426508199.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "order-saga-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bd8b11bf8f3a926b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c2b457520b89753"
              },
              {
                "subnet_id": "subnet-0e21167b7bba1227e"
              }
            ],
            "subnets": [
              "subnet-01c2b457520b89753",
              "subnet-0e21167b7bba1227e"
            ],
            "tags": {
              "Name": "order-saga-alb"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-alb",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Order Saga API",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "inventory",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-inventory/a99f8ec8cc0c867d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/02f83da9d6bcaa34",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/inventory/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/02f83da9d6bcaa34",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "priority": 20,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-notification/4d78a536a7e4e252",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/aafc6fc54a052cb7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/notification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/aafc6fc54a052cb7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "priority": 40,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-payment/6ea4ec22afa386cd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/b7fcd735f65ed280",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/payment/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/b7fcd735f65ed280",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "priority": 30,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "producer",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-producer/2418d20a4db1910a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/520f211e304ddd57",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/producer/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener-rule/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec/520f211e304ddd57",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:listener/app/order-saga-alb/d9974d5daff81d1d/745f969d48774cec",
            "priority": 10,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "inventory",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-inventory/a99f8ec8cc0c867d",
            "arn_suffix": "targetgroup/tg-inventory/a99f8ec8cc0c867d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/api/inventory/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-inventory/a99f8ec8cc0c867d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-inventory",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-notification/4d78a536a7e4e252",
            "arn_suffix": "targetgroup/tg-notification/4d78a536a7e4e252",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/api/notification/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-notification/4d78a536a7e4e252",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-notification",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-payment/6ea4ec22afa386cd",
            "arn_suffix": "targetgroup/tg-payment/6ea4ec22afa386cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/api/payment/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-payment/6ea4ec22afa386cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-payment",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "producer",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-producer/2418d20a4db1910a",
            "arn_suffix": "targetgroup/tg-producer/2418d20a4db1910a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/api/producer/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:882040517001:targetgroup/tg-producer/2418d20a4db1910a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:882040517001:loadbalancer/app/order-saga-alb/d9974d5daff81d1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-producer",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:route-table/rtb-093dcaf67f268cdab",
            "id": "rtb-093dcaf67f268cdab",
            "owner_id": "882040517001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05369f75c56097597",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "order-saga-public-rt"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-public-rt",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a0e2cfee6fe87f",
            "route_table_id": "rtb-093dcaf67f268cdab",
            "subnet_id": "subnet-01c2b457520b89753"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc55ec9900f1eea",
            "route_table_id": "rtb-093dcaf67f268cdab",
            "subnet_id": "subnet-0e21167b7bba1227e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-0bd8b11bf8f3a926b",
            "description": "Allow inbound HTTPS/HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd8b11bf8f3a926b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "order-saga-alb-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "inventory",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-0eba9ddd352c4e2de",
            "description": "Security group for inventory service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eba9ddd352c4e2de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd8b11bf8f3a926b"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "order-saga-ecs-inventory-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-0cd1aeb578a1d4456",
            "description": "Security group for notification service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd1aeb578a1d4456",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd8b11bf8f3a926b"
                ],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "order-saga-ecs-notification-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-03a49a4badf9ec419",
            "description": "Security group for payment service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a49a4badf9ec419",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd8b11bf8f3a926b"
                ],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "order-saga-ecs-payment-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "producer",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-0cba655830f53f2dd",
            "description": "Security group for producer service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cba655830f53f2dd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd8b11bf8f3a926b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "order-saga-ecs-producer-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-0e03490f2df82e04b",
            "description": "Security group for IBM MQ on EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e03490f2df82e04b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IBM MQ Admin Console",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "JMS connections from all ECS services",
                "from_port": 1414,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a49a4badf9ec419",
                  "sg-0cba655830f53f2dd",
                  "sg-0cd1aeb578a1d4456",
                  "sg-0eba9ddd352c4e2de"
                ],
                "self": false,
                "to_port": 1414
              }
            ],
            "name": "order-saga-mq-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pgadmin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-09170d51dcba64d03",
            "description": "Security group for pgAdmin on EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09170d51dcba64d03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Loki",
                "from_port": 3100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "pgAdmin Web UI",
                "from_port": 5050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5050
              }
            ],
            "name": "order-saga-pgadmin-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:security-group/sg-04461fd90318ee38d",
            "description": "Security group for the shared RDS database",
            "egress": [],
            "id": "sg-04461fd90318ee38d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from MQ Bastion host",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e03490f2df82e04b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from all ECS services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a49a4badf9ec419",
                  "sg-0cba655830f53f2dd",
                  "sg-0cd1aeb578a1d4456",
                  "sg-0eba9ddd352c4e2de"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from pgAdmin host",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09170d51dcba64d03"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "order-saga-rds-sg",
            "name_prefix": "",
            "owner_id": "882040517001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Project": "OrderSaga"
            },
            "timeouts": null,
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_security_group.mq",
            "aws_security_group.pgadmin",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:subnet/subnet-0cfaaa9007c613e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfaaa9007c613e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882040517001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "order-saga-private-db-subnet-1"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-private-db-subnet-1",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:subnet/subnet-0623c4fdf04b4e188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0623c4fdf04b4e188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882040517001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "order-saga-private-db-subnet-2"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-private-db-subnet-2",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:subnet/subnet-01c2b457520b89753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c2b457520b89753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882040517001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "order-saga-public-subnet-1"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-public-subnet-1",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:subnet/subnet-0e21167b7bba1227e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e21167b7bba1227e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882040517001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "order-saga-public-subnet-2"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-public-subnet-2",
              "Project": "OrderSaga"
            },
            "vpc_id": "vpc-090ad754f1a90a617"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:882040517001:vpc/vpc-090ad754f1a90a617",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0641554f6b2bf201e",
            "default_route_table_id": "rtb-0116c3e5850e62971",
            "default_security_group_id": "sg-04745ff33e6fdc55c",
            "dhcp_options_id": "dopt-0a5ad1c5bf5b784ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090ad754f1a90a617",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0116c3e5850e62971",
            "owner_id": "882040517001",
            "tags": {
              "Name": "order-saga-vpc"
            },
            "tags_all": {
              "Environment": "POC",
              "ManagedBy": "Terraform",
              "Name": "order-saga-vpc",
              "Project": "OrderSaga"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}